# services/cell-api/internal/api/openapi_gen.json
@@ -220,38 +220,6 @@
         ]
       }
     },
-    "/api/v1/alert-email-template": {
-      "get": {
-        "operationId": "get_api_v1_alert_email_template",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthenticated"
-          }
-        },
-        "summary": "List alert-email-template",
-        "tags": [
-          "alert-email-template"
-        ]
-      },
-      "put": {
-        "operationId": "put_api_v1_alert_email_template",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthenticated"
-          }
-        },
-        "summary": "Update alert-email-template",
-        "tags": [
-          "alert-email-template"
-        ]
-      }
-    },
     "/api/v1/alert-instances": {
       "get": {
         "operationId": "get_api_v1_alert_instances",
@@ -6763,9 +6731,6 @@
     },
     {
       "name": "alert-deliveries"
-    },
-    {
-      "name": "alert-email-template"
     },
     {
       "name": "alert-instances"
